# sessionpt

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: api.md  changelog.md  guide.md  index.md
examples/: 01_session_aware_ohlc.py  02_pivot_levels.py  03_event_backtest.py  04_vectorized_backtest.py  05_walk_forward.py  README.md
src/sessionpt/: __init__.py  constants.py
src/sessionpt/analytics/: __init__.py  metrics.py
src/sessionpt/backtesting/: __init__.py  engine.py  policies.py  results.py  specs.py  vectorized.py
src/sessionpt/enums/: __init__.py  direction.py  exit_reason.py  pivot_level.py  pivot_type.py
src/sessionpt/features/: __init__.py  indicators.py  vwap.py
src/sessionpt/filters/: __init__.py  trend.py
src/sessionpt/levels/: __init__.py  initial_balance.py
src/sessionpt/pivots/: __init__.py  calculator.py  confluence.py  ohlc.py  shifts.py
src/sessionpt/sessions/: __init__.py  core.py  presets.py
src/sessionpt/validation/: __init__.py  meta_labeling.py  multiple_testing.py  search.py  selection.py  walk_forward.py
tests/: conftest.py  test_analytics.py  test_backtesting.py  test_enums.py  test_features.py  test_filters.py  test_levels.py  test_pivot_utilities.py  test_pivots.py  test_sessions.py  test_validation.py  test_validation_helpers.py
