[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "session-pt"
version = "0.1.0"
description = "Session-aware backtesting engine with pivot indicators for futures markets"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "Oskar Rodziewicz"},
]
keywords = [
    "backtesting",
    "futures",
    "pivot-points",
    "session-aware",
    "trading",
    "quantitative-finance",
    "numba",
    "walk-forward",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Typing :: Typed",
]
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "python-dateutil>=2.8",
]

[project.urls]
Homepage = "https://github.com/oskarone21/sessionpt"
Repository = "https://github.com/oskarone21/sessionpt"
Issues = "https://github.com/oskarone21/sessionpt/issues"
Changelog = "https://github.com/oskarone21/sessionpt/blob/main/CHANGELOG.md"

[project.optional-dependencies]
numba = ["numba>=0.57"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-xdist>=3.0",
    "hypothesis>=6.0",
    "ruff>=0.8",
    "mypy>=1.0",
    "pre-commit>=3.0",
    "types-python-dateutil>=2.8",
    "build>=1.0",
    "twine>=5.0",
]
docs = [
    "mkdocs-material>=9.0",
    "mkdocstrings[python]>=0.20",
]

[tool.hatch.build.targets.wheel]
packages = ["src/sessionpt"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow",
    "integration: marks integration tests",
]
addopts = "--strict-markers -v --tb=short"
